# Workout-RAG-system

./: .gitignore  TechStack.txt  TechStackExplained.txt  datamodel.txt  docker-compose.yml  phase1.txt  phases.txt
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: c30a81a41f97_create_initial_six_tables.py
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: programs.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: ProgramForm.tsx  ProgramViewer.tsx  layout.tsx  page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
